--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Rebecca Chang
-logo: /Users/Rebecca/Downloads/IMG_8763.JPG
+logo: /Users/Rebecca/Downloads/IMG_8763.png
 show_downloads: true
 theme: jekyll-theme-minimal
